--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">Ant</string>
+
+    <string name="horizontal">Horizontal</string>
+    <string name="vertical">Vertical</string>
+    <string name="bottomScaleText">BottomScale</string>
+    <string name="bottomAlphaText">BottomAlpha</string>
+    <string name="topScaleText">TopScale</string>
+    <string name="topAlphaText">TopAlpha</string>
+    <string name="middleScaleText">MiddleScale</string>
+    <string name="middleAlphaText">MiddleAlpha</string>
+    <string name="status" formatted="false">Status: %s</string>
+    <string name="idle">Idle</string>
+    <string name="dragging_left">Dragging Left</string>
+    <string name="dragging_right">Dragging Right</string>
+    <string name="dragging_top">Dragging Top</string>
+    <string name="dragging_bottom">Dragging Bottom</string>
+    <string name="settling_left">Settling Left</string>
+    <string name="settling_right">Settling Right</string>
+    <string name="settling_top">Settling Top</string>
+    <string name="settling_bottom">Settling Bottom</string>
+    <string name="three_child">3 Child</string>
+    <string name="five_child">5 Child</string>
+    <string name="middle">Middle Item</string>
+    <string name="bottom">Bottom Item</string>
 </resources>
